# rust_auth_back

./: .gitignore  docker-compose.yml  init.db  readme.md
rust_auth/: Cargo.toml
rust_auth/src/: main.rs
rust_auth/src/controllers/: users_controllers.rs
rust_auth/src/custom_middleware/: mod.rs
rust_auth/src/routes/: mod.rs  users_routes.rs
