[package]
name = "rust_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
axum = "0.8.1"
sqlx = {version = "0.8.0", features = ["postgres","runtime-async-std"] }
serde = {version = "1.0.209", features = ["derive"]}
tower-http = { version = "0.6.2" , features = ["cors"]}